--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-<<<<<<< HEAD
-    <h1 class="title">Hello World v10, By Dusit</h1>
-=======
-    <h1 class="title">Hello Worldv10</h1>
->>>>>>> 74ac5bdbb6ae58c1613b5d20f896a830cd6381eb
+    <h1 class="title">Hello World v10, By Dusitza</h1>
   </body>
 </html>
